ViTables ChangeLog
==================
** May 14, 2017 **
Table queries slightly reworked: query ranges are now Python-like ranges i.e. 
the meaning of the start, stop and step parameters is the same as for Python
slices.

** May 13, 2017 **
Bug fixed: zoomed views have rows and columns starting from 1.

Bug fixed: displaying EnumCol columns is badly implemented.

** May 12, 2017 **
Bug fixed: tooltips for link nodes are not shown. Instead a verbose error
message is logged.

** May 09, 2017 **
Bug fixed: if we close the Logger in the current session it won't be opened in 
future sessions. And if we float the Logger in the current session it will
automatically be floated in future sessions.

** May 07, 2017 **
Fixed a bug in the File -> New operation. New files could not be created.

** May 06, 2017 **
The 'Thanks to' list has been updated.

Copyright notice and release version have been updated.

** November 06, 2014 **
Project file (i.e vitables.pro) and translations have all been updated.

** December 12, 2013 **
Context menus on views are now allowed which is a good thing for plugins.

** November 19, 2013 **
First working version of the columnar_org plugin is available.
I think I've fixed all serious bugs.

** November 15, 2013 **
Ungrouping arrays has been implemented in the columnar_org plugin.
At the moment I just see one minor bug. All functionality has been
implemented so its time for a final debug and refactor sessions.

** November 14, 2013 **
Code in the columnar_org plugin has been debugged and refactored.
A small bug in the closing arrays process remains open. Ungrouping hasn't
been implemented yet.

** November 13, 2013 **
Still working in the columnar_org plugin.
Grouping arrays has been debugged and now it works well in most cases.
Closing arrays has been implemented. More debugging and breaking-up the
groups to recover their components are pending tasks.

** November 11, 2013 **
Still working in the columnar_org plugin.