@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** May 15, 2017 **
+Bug fixed: files cannot be opened by drag and drop into the tree view.
+
 ** May 14, 2017 **
 Table queries slightly reworked: query ranges are now Python-like ranges i.e. 
 the meaning of the start, stop and step parameters is the same as for Python
